homelab/apps/nginx-ts/kustomize/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nginx-ts
spec:
  ports:
  - port: 8000
