homelab/apps/nginx-ts/kustomize/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ts
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls: 
  - hosts:
    - "nginx-ts-test"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ts
            port:
              number: 8000
